# PythonAdaptiveRadCalcStudy

./: .gitignore  .pre-commit-config.yaml  251002 PRD for Python Rad Calc Validation.docx  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  MIGRATION_GUIDE.md  README.md  debug_main_function.py  debug_receiver_with_prints.py  debug_rotation.py  debug_setback_flag.py  debug_xz_geometry.py  hello_test.py  main.py  occluder_params.py  occluder_projection.py  pyproject.toml  requirements.lock.txt  requirements.txt  run_viewfactor_scenarios.py  test_3d_mesh.html  test_3d_planarity.html  vf_compare_plots.py  vf_setback_sweep.py  viewfactor_1ai_adaptive_obstructed.py  viewfactor_1ai_adaptive_unobstructed.py  viewfactor_1ai_general.py  viewfactor_1ai_obstructed_general.py  viewfactor_1ai_obstructed_parallel.py  viewfactor_1ai_parallel.py  viewfactor_demo_plot.py  viewfactor_sweep.py  ~$1002 PRD for Python Rad Calc Validation.docx
.devcontainer/: Dockerfile  devcontainer.json
DOCS/: CLI.md  CODING_STANDARDS.md  DEVELOPMENT_GUIDELINES.md  DEV_AUDIT_LEGACY.md  DEV_CLEANUP.md  DEV_DEPS_GRAPH.md  FSE-RAD-VIEWFACTOR-PRD-v0.5.md  KNOWN_ISSUES.md  PLOTTING_PRINCIPLES.md  TODO_v1.1.0.md  VALIDATION.md  validation_cases.yaml
audit/: deps_graph.dot  legacy_report.csv  legacy_report.json
eng/: run_with_timeout.py
results/: .gitkeep
results_adapt/: adaptive.csv
results_area_avg/: cases_summary.csv
results_enhanced/: cases_summary.csv
results_enhanced2/: cases_summary.csv
results_enhanced3/: cases_summary.csv
results_enhanced4/: cases_summary.csv
results_enhanced5/: cases_summary.csv
results_mc/: montecarlo.csv
results_ref/: analytical.csv
results_s9_adapt_contact/: adaptive.csv
results_s9_adapt_hardtol/: adaptive.csv
results_s9_fixedgrid_timeout/: fixedgrid.csv
results_s9_mc_timeout/: montecarlo.csv
results_s9_suite/: cases_summary.csv
results_suite/: cases_summary.csv
results_test/: cases_summary.csv
results_validation/: cases_summary.csv
scripts/: audit_deps.py  freeze-lock.ps1  release.ps1  run-all.ps1  run_case_with_timeout.ps1  run_case_with_timeout.sh  setup.ps1  test_2d_legend_and_pad.py  test_3d_mesh.py  test_fast_grid.py  test_heatmap_n.py  test_markers_wiring_smoke.py  test_plot3d_rect.py  test_timeout_wrapper.py  test_true_scale_axes.py
src/: __init__.py  adaptive.py  analytical.py  cli.py  cli_cases.py  cli_parser.py  (+14 more)
(+131 files in other folders)
